--- a/docs/TMEngine.ditamap
+++ b/docs/TMEngine.ditamap
@@ -33,7 +33,7 @@
     </booklists>
   </frontmatter>
   <chapter navtitle="Overview">
-    <topicref href="TMEngine.dita"/>
+    <topicref href="topics/TMEngine.dita"/>
   </chapter>
   <chapter navtitle="Java Library">
     
