--- a/docs/topics/ImportTMX.dita
+++ b/docs/topics/ImportTMX.dita
@@ -3,6 +3,8 @@
 <topic id="ImportTMX">
     <title>Import TMX File</title>
     <body>
-        <p></p>
+        <p>End Point: <codeph>[TMEngine URL]/create</codeph></p>
+        <p>Default: <codeph conref="ServerAPI.dita#ServerAPI/defaultUrl"
+        /><codeph>import</codeph></p>
     </body>
 </topic>
