--- a/docs/topics/ProcessStatus.dita
+++ b/docs/topics/ProcessStatus.dita
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
-<topic id="RenameMemory">
-    <title>Rename Memory</title>
+<topic id="ProcessStatus">
+    <title>Process Status</title>
     <body>
         <p>End Point: <codeph>[TMEngine URL]/create</codeph></p>
         <p>Default: <codeph conref="ServerAPI.dita#ServerAPI/defaultUrl"
-        /><codeph>rename</codeph></p>
+        /><codeph>status</codeph></p>
     </body>
 </topic>
