--- a/docs/topics/StopServer.dita
+++ b/docs/topics/StopServer.dita
@@ -3,6 +3,8 @@
 <topic id="StopServer">
     <title>Stop Server</title>
     <body>
-        <p></p>
+        <p>End Point: <codeph>[TMEngine URL]/create</codeph></p>
+        <p>Default: <codeph conref="ServerAPI.dita#ServerAPI/defaultUrl"
+        /><codeph>stop</codeph></p>
     </body>
 </topic>
