--- a/docs/topics/ProcessStatus.dita
+++ b/docs/topics/ProcessStatus.dita
@@ -5,6 +5,63 @@
     <body>
         <p>End Point: <codeph>[TMEngine URL]/create</codeph></p>
         <p>Default: <codeph conref="ServerAPI.dita#ServerAPI/defaultUrl"
-        /><codeph>status</codeph></p>
+            /><codeph>status</codeph></p>
+
+        <p>Send a <codeph>POST</codeph> request to the method end point with this parameters in a
+            JSON body:</p>
+        <simpletable>
+            <sthead>
+                <stentry>Field</stentry>
+                <stentry>Required</stentry>
+                <stentry>Content</stentry>
+            </sthead>
+            <strow>
+                <stentry><apiname>process</apiname></stentry>
+                <stentry>Yes</stentry>
+                <stentry>ID of the background process to check</stentry>
+            </strow>
+        </simpletable>
+        <p>Example:</p>
+        <codeblock translate="no">{
+  "process": "1568223016762"
+}</codeblock>
+        <p>The server responds with a JSON object containing two or three fields.</p>
+        <p>On successful status check, field '<codeph>status</codeph>' is set to '<codeph>OK</codeph>'
+            and field '<codeph>result</codeph>' contains current status.</p>
+        <p>Example:</p>
+
+
+        <p>Field '<codeph>result</codeph>' may have these values:</p>
+
+        <ul>
+            <li><b>Pending</b>: processing is still going on.
+                <codeblock translate="no">{
+  "result": "Pending",
+  "status": "OK"
+}</codeblock></li>
+            <li><b>Completed</b>: processing has finished. Process outcome is provided in the
+                    '<codeph>data</codeph>' field.
+                <codeblock translate="no">{
+  "result": "Completed",
+  "data": {
+    "imported": "57678"
+  },
+  "status": "OK"
+}</codeblock></li>
+            <li><b>Failed</b>: processing failed. Failure reason is provided in
+                    '<codeph>reason</codeph>'
+                field.<codeblock translate="no">{
+  "result": "Failed",
+  "reason": "/Volumes/Data/something.tmx (No such file or directory)",
+  "status": "failed"
+}</codeblock>
+            </li>
+        </ul>
+        <p>If the process cannot be checked, the server omits the '<codeph>result</codeph>' field
+            and provides a failure reason.</p>
+        <codeblock translate="no">{
+  "reason": "Missing 'process' parameter",
+  "status": "failed"
+}</codeblock>
     </body>
 </topic>
