--- a/docs/topics/ImportTMX.dita
+++ b/docs/topics/ImportTMX.dita
@@ -64,7 +64,7 @@
   "status": "failed",            
   "reason": "Unknown memory type"        
 }</codeblock>
-        <p>After initiating the import process, monitor its status using the <xref
+        <p>After starting the import process, monitor its status using the <xref
                 href="ProcessStatus.dita"/> method. On successful completion, the result will
             contain the number of segments imported.</p>
         <p>Example:</p>
