--- a/docs/topics/ListMemories.dita
+++ b/docs/topics/ListMemories.dita
@@ -13,7 +13,7 @@
     <codeblock translate="no">{
   "memories": [
      {
-       "owner": "rmraya",
+       "owner": "manager",
        "isOpen": false,
        "name": "Fluenta Localization",
        "id": "fluenta",
@@ -21,7 +21,7 @@
        "creationDate": "2019-09-10 21:54:13 UYT"
      }, 
      {
-       "owner": "rmraya",
+       "owner": "manager",
        "isOpen": false,
        "name": "First Memory",
        "id": "1568163112478",
