--- a/docs/topics/ServerAPI.dita
+++ b/docs/topics/ServerAPI.dita
@@ -4,7 +4,7 @@
     <title>REST Methods</title>
     <shortdesc/>
     <conbody>
-        <p>The REST methods that TMEngine's server support are:</p>
+        <p>The REST methods that TMEngine's server supports are:</p>
         <ul>
             <li><xref href="CreateMemory.dita"></xref></li>
             <li><xref href="ListMemories.dita"></xref></li>
